feat: runtime configurable processors